--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
-        <h1>Welcome to My Web Page</h1>
+        <h1>Welcome to My Web Page pelo</h1>
         <p>This is a sample paragraph to demonstrate linking a CSS file.</p>
     </body>
 </html>
