--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
     <head>
-        <title>My Web Page</title>
+        <title>VertiCode, Tu vas tomber de haut. Olive Oil and Code</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
+        <meta name="description" content="A crazy coding website where you can lose your mind over code because it's possible to code in Kabylian !">
     </head>
     <body>
-        <h1>Welcome to My Web Page pelo</h1>
-        <p>This is a sample paragraph to demonstrate linking a CSS file.</p>
+        <h1>Welcome to VertiCode</h1>
+        <p>The Page Which Will Make You Go Crazy because <strong>AVAVA INOUVA</strong>On the Floor</p>
+        <h2>This is a sample paragraph to demonstrate linking a CSS file.</h2>
     </body>
 </html>
