je sais plus j'ai commit mais tiens

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <h1>Welcome to VertiCode</h1>
         <p>The Page Which Will Make You Go Crazy because <strong>AVAVA INOUVA</strong>On the Floor</p>
-        <h2>This is a sample paragraph to demonstrate linking a CSS file.</h2>
+        <h2>Code in Kabylian</h2>
+        <p>Si tu veux codder avec des <strong>INPUTS</strong>et des<strong>OUTPUTS</strong> suis moi sur les routes de l'huile d'olive hehehee...</p>
     </body>
 </html>
