Héhéé ... Des idées naissent ... Viens voir !

--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
         <p>The Page Which Will Make You Go Crazy because <strong>AVAVA INOUVA</strong>On the Floor</p>
         <h2>Code in Kabylian</h2>
         <p>Si tu veux codder avec des <strong>INPUTS</strong>et des<strong>OUTPUTS</strong> suis moi sur les routes de l'huile d'olive hehehee...</p>
+        <p>Si tu es ready tabarnak à partir à l'aventure il te faut:</p>
+        <ul>
+            <li>Hein ?</li>
+            <li>Une tour ?</li>
+            <LI>Je m'en fous que ti habite dans une tour</LI>
+            <li>Nan tu vas avoir besoin d'une connexion internet pardis</li>
+            <li>Et de Arnaud ! Trouve le !</li>
+        </ul>
+        <h2><strong><u>Attention !! Avant de retrouver Arnaud récurère son horloge !!</u></strong></h2>
     </body>
 </html>
