Je sais pas ce que je fais ... Mais je le fais

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <li>Nan tu vas avoir besoin d'une connexion internet pardis</li>
             <li>Et de Arnaud ! Trouve le !</li>
         </ul>
-        <h2><strong><u>Attention !! Avant de retrouver Arnaud récurère son horloge !!</u></strong></h2>
+        <h3>OUYARAYYYAAAA: IT'S TIIIIIME !!</h3>
+        <p><strong><u>Attention !! Avant de retrouver Arnaud récurère son horloge !!</u></strong></p>
+        <a href="Laquête1.html">Commencer la quête de l'horloge</a>
     </body>
 </html>
