Là ça marche je crois

--- a/Laquete2.html
+++ b/Laquete2.html
@@ -1,4 +1,4 @@
-<html></html>
+<html>
     <head>
         <title>VertiCode: La quête de l'Horloge - Bon on peut y aller ?</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
@@ -6,6 +6,5 @@
     </head>
     <body>
         <h1>On est prêt !! vous sentez cette odeur ??</h1>
-    
-</body>
+    </body>
 </html>
