J'ai compris certaines choses

--- a/Laquete2.html
+++ b/Laquete2.html
@@ -5,6 +5,11 @@
         <meta name="description" content="Est-ce qu'un jour on pourrait y aller ?? Suspens ...">
     </head>
     <body>
-        <h1>On est prêt !! vous sentez cette odeur ??</h1>
+        <h1><strong>Sur le départ ou presque:</strong></h1>
+        <p>On est prêt !! vous sentez cette odeur ??</p>
+        <ul>
+            <li><a href="Laquete3.html">ça pue !! On continue !!</a></li>
+            <li><a href="Laquête1.html">J'ai oublié haja je reviens</a></li>
+        </ul>
     </body>
 </html>
