--- a/Laquête1.html
+++ b/Laquête1.html
@@ -8,6 +8,6 @@
         <h1>Point de Starting: Mais où est Charl... L'Horloge ?</h1>
     <p>Pour commencer saches que l'horloge seule t'aidera à trouver Arnaud qui vous guidera vers les routes du Code et de l'olive oil !! </p>
     <p>La dernière fois qu'elle a été vue c'est à la prochaine étape ! Enfin je crois ... </p>
-    <p>Alors soit tu vas <a href="Laquête2.html">commencer la quête</a>, soit <a href="index.html">flemme</a></p>
+    <p>Alors soit tu vas <a href="Laquete2.html">commencer la quête</a>, soit <a href="index.html">flemme</a></p>
 </body>
 </html>
