On continue en image

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Welcome to VertiCode</h1>
+        <img src="img/introloupe.png" alt="ça pourrait résumer l'idée du site" width="1400" height="700">
         <p>The Page Which Will Make You Go Crazy because <strong>AVAVA INOUVA</strong>On the Floor</p>
         <h2>Code in Kabylian</h2>
         <p>Si tu veux codder avec des <strong>INPUTS</strong>et des<strong>OUTPUTS</strong> suis moi sur les routes de l'huile d'olive hehehee...</p>
