--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
         <title>VertiCode, Tu vas tomber de haut. Olive Oil and Code</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
         <meta name="description" content="A crazy coding website where you can lose your mind over code because it's possible to code in Kabylian !">
+        <style>
+            table {
+  border: 2px solid rgb(140 140 140);
+}
+
+th,
+td {
+  border: 1px solid rgb(160 160 160);
+}
+        </style>
     </head>
     <body>
         <h1>Welcome to VertiCode</h1>
@@ -18,6 +28,29 @@
             <li>Nan tu vas avoir besoin d'une connexion internet pardis</li>
             <li>Et de Arnaud ! Trouve le !</li>
         </ul>
+        <p><strong>Tu peux le trouver ici ou là ...</strong></p>
+        <table>
+            <thead>
+                <tr>
+                    <th colspan="2">Arnaud peut être</th>
+                </tr>
+            </thead>
+            <tr>
+                <td>De nuit</td>
+                <td>En ville</td>
+            </tr>
+
+            <tr>
+                <td>De jour</td>
+                <td>pas en ville</td>            
+            </tr>
+            <tfoot>
+                <tr>
+                    <th colspan="2">En vrai on sait pas trop ...</th>
+                </tr>
+            </tfoot>
+        </table>
+        
         <h3>OUYARAYYYAAAA: IT'S TIIIIIME !!</h3>
         <p><strong><u>Attention !! Avant de retrouver Arnaud récurère son horloge !!</u></strong></p>
         <a href="Laquête1.html">Commencer la quête de l'horloge</a>
