Le début du styling

--- a/index.html
+++ b/index.html
@@ -12,13 +12,30 @@ th,
 td {
   border: 1px solid rgb(160 160 160);
 }
-        </style>
+        
+            aside {
+  width: 30%;
+  padding-left: 0.5rem;
+  margin-left: 0.5rem;
+  float: right;
+  box-shadow: inset 5px 0 5px -5px #29627e;
+  font-style: italic;
+  color: #239a65;
+}
+
+aside > p {
+  margin: 0.5rem;
+}</style>
     </head>
     <body>
-        <h1>Welcome to VertiCode</h1>
+        <h1 style="color: darkgoldenrod; font-family: fantasy;">Welcome to VertiCode</h1>
         <img src="img/introloupe.png" alt="ça pourrait résumer l'idée du site" width="1400" height="700">
         <p>The Page Which Will Make You Go Crazy because <strong>AVAVA INOUVA</strong>On the Floor</p>
-        <h2>Code in Kabylian</h2>
+        <aside>
+            <h2>Note de l'auteur</h2>
+            <p>Ce site est une expérimentation folle pour voir si je peux créer un univers décalé autour du code et de la programmation. Le but est de rendre le code plus accessible et amusant en introduisant des éléments culturels inattendus, comme le kabyle. J'espère que vous apprécierez cette aventure autant que moi j'ai pris plaisir à la créer !</p>
+        </aside>
+        <h3 style="color:darkcyan; font-family: 'Papyrus', Comic Sans MS, fantasy;">Code in Kabylian</h3>
         <p>Si tu veux codder avec des <strong>INPUTS</strong>et des<strong>OUTPUTS</strong> suis moi sur les routes de l'huile d'olive hehehee...</p>
         <p>Si tu es ready tabarnak à partir à l'aventure il te faut:</p>
         <ul>
@@ -51,8 +68,15 @@ td {
             </tfoot>
         </table>
         
-        <h3>OUYARAYYYAAAA: IT'S TIIIIIME !!</h3>
+        <h4>OUYARAYYYAAAA: IT'S TIIIIIME !!</h4>
+        <div lang=ben>
+        <p><strong><u>মনোযোগ দাও!! আরনাউডকে খুঁজে বের করার আগে, তার ঘড়িটি পরিষ্কার করো!!</u></strong></p>
+        </div>
+        <p>T'as rien compris ?? moi non plus ... Je pensais que c'était de l'elfique mais ...</p>
+        <p>Donc je crois que c'est du kabyle. ça veut dire:</p>
+        <div lang=fr>
         <p><strong><u>Attention !! Avant de retrouver Arnaud récurère son horloge !!</u></strong></p>
+        </div>
         <a href="Laquête1.html">Commencer la quête de l'horloge</a>
     </body>
 </html>
