--- a/Horloge/H2.html
+++ b/Horloge/H2.html
@@ -8,8 +8,8 @@
         <h1><strong>Sur le départ ou presque:</strong></h1>
         <p>On est prêt !! vous sentez cette odeur ??</p>
         <ul>
-            <li><a href="Laquete3.html">ça pue !! On continue !!</a></li>
-            <li><a href="Laquête1.html">J'ai oublié haja je reviens</a></li>
+            <li><a href="H3.html">ça pue !! On continue !!</a></li>
+            <li><a href="H1.html">J'ai oublié haja je reviens</a></li>
         </ul>
     </body>
 </html>
