--- a/index.html
+++ b/index.html
@@ -3,39 +3,19 @@
         <title>VertiCode, Tu vas tomber de haut. Olive Oil and Code</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
         <meta name="description" content="A crazy coding website where you can lose your mind over code because it's possible to code in Kabylian !">
-        <style>
-            table {
-  border: 2px solid rgb(140 140 140);
-}
-
-th,
-td {
-  border: 1px solid rgb(160 160 160);
-}
-        
-            aside {
-  width: 30%;
-  padding-left: 0.5rem;
-  margin-left: 0.5rem;
-  float: right;
-  box-shadow: inset 5px 0 5px -5px #29627e;
-  font-style: italic;
-  color: #239a65;
-}
-
-aside > p {
-  margin: 0.5rem;
-}</style>
+    
     </head>
     <body>
-        <h1 style="color: darkgoldenrod; font-family: fantasy;">Welcome to VertiCode</h1>
-        <img src="img/introloupe.png" alt="ça pourrait résumer l'idée du site" width="1400" height="700">
+       <header>
+        <h1 class="title-big">Welcome to VertiCode</h1>
+        <img src="img/introloupe.png" alt="ça pourrait résumer l'idée du site" width="700" height="400">
         <p>The Page Which Will Make You Go Crazy because <strong>AVAVA INOUVA</strong>On the Floor</p>
+        </header>
         <aside>
             <h2>Note de l'auteur</h2>
             <p>Ce site est une expérimentation folle pour voir si je peux créer un univers décalé autour du code et de la programmation. Le but est de rendre le code plus accessible et amusant en introduisant des éléments culturels inattendus, comme le kabyle. J'espère que vous apprécierez cette aventure autant que moi j'ai pris plaisir à la créer !</p>
         </aside>
-        <h3 style="color:darkcyan; font-family: 'Papyrus', Comic Sans MS, fantasy;">Code in Kabylian</h3>
+        <h3 class="title-k">Code in Kabylian</h3>
         <p>Si tu veux codder avec des <strong>INPUTS</strong>et des<strong>OUTPUTS</strong> suis moi sur les routes de l'huile d'olive hehehee...</p>
         <p>Si tu es ready tabarnak à partir à l'aventure il te faut:</p>
         <ul>
@@ -77,6 +57,6 @@ aside > p {
         <div lang=fr>
         <p><strong><u>Attention !! Avant de retrouver Arnaud récurère son horloge !!</u></strong></p>
         </div>
-        <a href="Laquête1.html">Commencer la quête de l'horloge</a>
+        <a href="Horloge/H1.html">Commencer la quête de l'horloge</a>
     </body>
 </html>
